syntax = "proto3";

package pbs;
option go_package = "github.com/redeslab/go-simple/pbs;pbs";

service CmdService {
    rpc SetLogLevel (LogLevel) returns (CommonResponse) {}
}

message EmptyRequest {

}

message UserCounterReq {
    string User = 1;
}

message CounterResult {
    int32 id = 1;
    int32 bucket = 2;
}

message EmptyReq {
}

message ReceiptReq{
    string user = 1;
    int32 report = 2;
}

message ReceiptOneReq{
    string user = 1;
    string credit = 2;
    int32 report = 3;
}

message UserInfoReq{
    string user = 1;
}

message CommonResponse {
    string msg = 1;
}

message LogLevel{
    string Module = 1;
    int32  Level  = 2;
}

message AccessAddress{
    string Adddr = 1;
    int32  op = 2;
}

message WebPort{
    int32 Port = 1;
}


